resizable-columns init

--- a/style/index.less
+++ b/style/index.less
@@ -35,8 +35,13 @@
       }
     }
 
-    &:hover .icon{
-      visibility: visible;
+    &:hover{
+      .icon{
+        visibility: visible;
+      }
+      .col-resizer {
+        border: 1px solid;
+      }
     }
 
     &.disabled-drag {
